Add UI funcionalities for db-demo on RDS services... not yet coupled with REST services

--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../index.html"><b>WebApplication</b>Evolution</a>
+    <a href="../index.html"><b>WebApp</b>Evolution</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
